--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run unit tests with pytest
         run: |
           uv pip install --system pytest
-          pytest tests/
+          PYTHONPATH=. pytest tests/
 
       - name: Run integration tests with Behave
         run: |
