--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "CopyRepoToLLM"
 version = "0.0.1"
 dependencies = [
+    "pyside6-stubs>=6.7.3.0",
     "PySide6>=6.6.0",
     "typing-extensions>=4.14.0",
 ]
