--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,16 @@
+[build-system]
+requires = ["setuptools>=68"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "CopyRepoToLLM"
+name = "codebase_to_llm"
 version = "0.0.1"
 dependencies = [
     "pyside6-stubs>=6.7.3.0",
     "PySide6>=6.6.0",
     "typing-extensions>=4.14.0",
+    "mypy>=1.0",
 ]
+
+[project.urls]
+"Homepage" = "https://example.com/codebase_to_llm"
