--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "PySide6>=6.6.0",
     "typing-extensions>=4.14.0",
     "mypy>=1.0",
+    "pygments>=2.19.1",
 ]
 
 [project.urls]
