--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,22 +29,22 @@ jobs:
 
       - name: Lint with Black
         run: |
-          uv pip install --system black
-          black --check .
+          uv sync --dev
+          uv run black --check .
 
       - name: Type check with mypy
         run: |
-          uv pip install --system mypy
-          mypy .
+          uv sync --dev
+          uv run mypy .
 
       - name: Run unit tests with pytest
         run: |
-          uv pip install --system pytest
-          PYTHONPATH=. pytest tests/
+          uv sync --dev
+          PYTHONPATH=. uv run pytest tests/
 
       - name: Run integration tests with Behave
         run: |
-          uv pip install --system behave
+          uv sync --dev
           if ls features/*.feature 1> /dev/null 2>&1; then behave; else echo "No feature files found, skipping Behave tests."; fi
       
       - name: Build distribution
