--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "typing-extensions>=4.14.0",
     "mypy>=1.0",
     "pygments>=2.19.1",
+    "youtube-transcript-api>=0.6.2",
 ]
 
 [project.urls]
