--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "mypy>=1.0",
     "pygments>=2.19.1",
     "youtube-transcript-api>=0.6.2",
+    "trafilatura>=2.0.0",
 ]
 
 [project.urls]
