Enable external source loading (#30)
* Add external source support

* Big refacto to better match Hexagonal philosophy

* mypy, black and pytest OK

* Fix mypy

* Finishing Features Update

* Black

* mypy

* Black

---------

Co-authored-by: kduigou <kevin.duigou@idnow.io>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "typing-extensions>=4.14.0",
     "mypy>=1.0",
     "pygments>=2.19.1",
+    "youtube-transcript-api>=0.6.2",
+    "trafilatura>=2.0.0",
 ]
 
 [project.urls]
