--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dev = [
     "build>=1.2.2.post1",
     "mypy>=1.16.0",
     "pytest>=8.4.0",
+    "ruff>=0.12.0",
     "twine>=6.1.0",
     "types-pygments>=2.19.0.20250516",
 ]
