Add ruff in pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
         run: |
           uv sync --dev
           uv run mypy .
+      
+      - name: Type check with mypy
+        run: |
+          uv sync --dev
+          uv run ruff check
 
       - name: Run unit tests with pytest
         run: |
