--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "youtube-transcript-api>=0.6.2",
     "trafilatura>=2.0.0",
     "openai>=1.91.0",
+    "httpx>=0.28.1",
 ]
 
 [project.urls]
