--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pygments>=2.19.1",
     "youtube-transcript-api>=0.6.2",
     "trafilatura>=2.0.0",
+    "openai>=1.91.0",
+    "httpx>=0.28.1",
 ]
 
 [project.urls]
