--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "trafilatura>=2.0.0",
     "openai>=1.91.0",
     "httpx>=0.28.1",
+    "fastapi>=0.112.0",
+    "uvicorn>=0.30.0",
 ]
 
 [project.urls]
