--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "httpx>=0.28.1",
     "fastapi>=0.112.0",
     "uvicorn>=0.30.0",
+    "sqlalchemy>=2.0.0",
+    "psycopg[binary]>=3.1.0",
 ]
 
 [project.urls]
