--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "uvicorn>=0.30.0",
     "sqlalchemy>=2.0.0",
     "psycopg[binary]>=3.1.0",
+    "pyjwt>=2.9.0",
+    "passlib[bcrypt]>=1.7.4",
 ]
 
 [project.urls]
