--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "psycopg[binary]>=3.1.0",
     "pyjwt>=2.9.0",
     "passlib[bcrypt]>=1.7.4",
+    "python-multipart>=0.0.20",
 ]
 
 [project.urls]
