--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dev = [
     "pytest>=8.4.0",
     "ruff>=0.12.0",
     "twine>=6.1.0",
+    "types-passlib>=1.7.7.20250602",
     "types-pygments>=2.19.0.20250516",
 ]
 
