Add Docker containerization support with comprehensive deployment setup
- Add complete Docker configuration with Dockerfile, docker-compose.yml, and build scripts
- Include .dockerignore for optimized builds and deployment documentation
- Add Google Cloud Artifact Registry integration with automated build/push script
- Update dependencies and user authentication/registration use cases
- Provide both SQLite and PostgreSQL database options with persistent volumes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dev = [
     "twine>=6.1.0",
     "types-passlib>=1.7.7.20250602",
     "types-pygments>=2.19.0.20250516",
+    "typing-extensions>=4.14.0",
 ]
 
 [tool.setuptools]
