feat: secure http routes with JWT (#42)
* feat: secure http routes with JWT

* Add python-multipart dependency and ignore database files

- Add python-multipart>=0.0.20 to dependencies for file upload support
- Ignore users.db files in both src/ and root directories
- Update lock file with new dependency and bcrypt package

* Add types-passlib to dev dependencies

Add type stubs for passlib library to improve type checking during development.

* Add Docker containerization support with comprehensive deployment setup

- Add complete Docker configuration with Dockerfile, docker-compose.yml, and build scripts
- Include .dockerignore for optimized builds and deployment documentation
- Add Google Cloud Artifact Registry integration with automated build/push script
- Update dependencies and user authentication/registration use cases
- Provide both SQLite and PostgreSQL database options with persistent volumes

* Add web UI interface and improve error handling

- Add HTML web interface served at root endpoint
- Enhance user registration error handling with null checks
- Update .gitignore to exclude cloud deployment script

---------

Co-authored-by: kduigou <kevin.duigou@idnow.io>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "uvicorn>=0.30.0",
     "sqlalchemy>=2.0.0",
     "psycopg[binary]>=3.1.0",
+    "pyjwt>=2.9.0",
+    "passlib[bcrypt]>=1.7.4",
+    "python-multipart>=0.0.20",
 ]
 
 [project.urls]
@@ -36,7 +39,9 @@ dev = [
     "pytest>=8.4.0",
     "ruff>=0.12.0",
     "twine>=6.1.0",
+    "types-passlib>=1.7.7.20250602",
     "types-pygments>=2.19.0.20250516",
+    "typing-extensions>=4.14.0",
 ]
 
 [tool.setuptools]
