--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "pyjwt>=2.9.0",
     "passlib[bcrypt]>=1.7.4",
     "python-multipart>=0.0.20",
+    "alembic>=1.16.4",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.urls]
