Configure mypy and update gitignore for better project setup
- Add namespace_packages support and exclude patterns to mypy.ini
- Ignore docker/env-vars.yaml in gitignore

--- a/mypy.ini
+++ b/mypy.ini
@@ -3,6 +3,8 @@ python_version = 3.12
 mypy_path = src
 check_untyped_defs = True
 explicit_package_bases = True
+namespace_packages = True
+exclude = build/|dist/|\.venv/|venv/|\.mypy_cache/|.*\.egg-info/|migrations/
 
 [mypy-PySide6.*]
 ignore_missing_imports = True
