--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "alembic>=1.16.4",
     "python-dotenv>=1.0.0",
+    "google-cloud-storage>=2.10.0",
 ]
 
 [project.urls]
