--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "openai>=1.91.0",
     "httpx>=0.28.1",
     "fastapi>=0.112.0",
-    "uvicorn>=0.30.0",
+    "uvicorn[standard]>=0.30.0",
     "sqlalchemy>=2.0.0",
     "psycopg[binary]>=3.1.0",
     "pyjwt>=2.9.0",
@@ -25,6 +25,7 @@ dependencies = [
     "alembic>=1.16.4",
     "python-dotenv>=1.0.0",
     "google-cloud-storage>=2.10.0",
+    "websockets>=12.0",
 ]
 
 [project.urls]
