--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ users.db.backup
 Tinkering/*
 .clinerules/cli_other.md
 docker/env-vars.yaml
+docker/env-vars-dev.yaml
+docker/env-vars-prod.yaml
+scripts/test_ws.py
