--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "openai>=1.91.0",
     "httpx>=0.28.1",
     "fastapi>=0.112.0",
+    "celery>=5.4.0",
+    "redis>=5.0.0",
+    "yt-dlp>=2024.3.10",
     "uvicorn[standard]>=0.30.0",
     "sqlalchemy>=2.0.0",
     "psycopg[binary]>=3.1.0",
