--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,15 @@
             "type": "debugpy",
             "request": "launch",
             "module": "uvicorn",
-            "args": ["codebase_to_llm.interface.http_api:app"],
+            "args": ["codebase_to_llm.interface.fastapi.app:app"],
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Run Celery Worker",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "celery",
+            "args": ["-A", "codebase_to_llm.infrastructure.celery_download_queue", "worker", "--loglevel=info"],
             "console": "integratedTerminal"
         }
     ]
