Add Celery support and improve error handling
- Add celery to mypy ignore list for missing imports
- Lower Python requirement from 3.12 to 3.11 in pyproject.toml
- Fix null pointer handling in FastAPI file endpoints
- Update test syntax to use parenthesized context managers
- Update uv.lock with new Python version requirements

--- a/mypy.ini
+++ b/mypy.ini
@@ -8,3 +8,6 @@ exclude = build/|dist/|\.venv/|venv/|\.mypy_cache/|.*\.egg-info/|migrations/
 
 [mypy-PySide6.*]
 ignore_missing_imports = True
+
+[mypy-celery.*]
+ignore_missing_imports = True
