--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "codebase_to_llm"
 version = "0.0.4.1"
+requires-python = ">=3.11"
 dependencies = [
     "pyside6-stubs>=6.7.3.0",
     "PySide6>=6.6.0",
