--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "codebase_to_llm"
 version = "0.0.4.1"
+requires-python = ">=3.11"
 dependencies = [
     "pyside6-stubs>=6.7.3.0",
     "PySide6>=6.6.0",
@@ -16,6 +17,9 @@ dependencies = [
     "openai>=1.91.0",
     "httpx>=0.28.1",
     "fastapi>=0.112.0",
+    "celery>=5.4.0",
+    "redis>=5.0.0",
+    "yt-dlp>=2024.3.10",
     "uvicorn[standard]>=0.30.0",
     "sqlalchemy>=2.0.0",
     "psycopg[binary]>=3.1.0",
