Add VM management and multi-image Docker build support
- Add vm-management.sh script for dev/prod VM lifecycle management
- Update build-and-push.sh to build separate API and downloader images
- Add deployment scripts and env files to .gitignore
- Update celery queue infrastructure for downloader service

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ docker/env-vars-dev.yaml
 docker/env-vars-prod.yaml
 scripts/test_ws.py
 output.mp4
+docker/deploy-to-vm.sh
+docker/env-vars-dev.env
