--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,8 @@ dev = [
     "build>=1.2.2.post1",
     "mypy>=1.16.0",
     "pytest>=8.4.0",
+    "python-dotenv>=1.0.0",
+    "requests>=2.31.0",
     "ruff>=0.12.0",
     "twine>=6.1.0",
     "types-passlib>=1.7.7.20250602",
