Add type stubs and update mypy configuration
- Add types-requests and types-setuptools to dev dependencies
- Exclude features/ directory from mypy checks
- Add behave import ignore rule for BDD testing

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,10 +4,13 @@ mypy_path = src
 check_untyped_defs = True
 explicit_package_bases = True
 namespace_packages = True
-exclude = build/|dist/|\.venv/|venv/|\.mypy_cache/|.*\.egg-info/|migrations/
+exclude = build/|dist/|\.venv/|venv/|\.mypy_cache/|.*\.egg-info/|migrations/|features/
 
 [mypy-PySide6.*]
 ignore_missing_imports = True
 
 [mypy-celery.*]
+ignore_missing_imports = True
+
+[mypy-behave.*]
 ignore_missing_imports = True
