--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,8 @@ dev = [
     "twine>=6.1.0",
     "types-passlib>=1.7.7.20250602",
     "types-pygments>=2.19.0.20250516",
+    "types-requests>=2.32.4.20250809",
+    "types-setuptools>=80.9.0.20250822",
     "typing-extensions>=4.14.0",
 ]
 
