Don't run Bhave in the Pipeline for the moment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,10 @@ jobs:
           uv sync --dev
           PYTHONPATH=. uv run pytest tests/
 
-      - name: Run integration tests with Behave
-        run: |
-          uv sync --dev
-          if ls features/*.feature 1> /dev/null 2>&1; then behave; else echo "No feature files found, skipping Behave tests."; fi
+      # - name: Run integration tests with Behave
+      #   run: |
+      #     uv sync --dev
+      #     if ls features/*.feature 1> /dev/null 2>&1; then behave; else echo "No feature files found, skipping Behave tests."; fi
       
       - name: Build distribution
         run: |
