--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,10 +45,14 @@ dev = [
     "build>=1.2.2.post1",
     "mypy>=1.16.0",
     "pytest>=8.4.0",
+    "python-dotenv>=1.0.0",
+    "requests>=2.31.0",
     "ruff>=0.12.0",
     "twine>=6.1.0",
     "types-passlib>=1.7.7.20250602",
     "types-pygments>=2.19.0.20250516",
+    "types-requests>=2.32.4.20250809",
+    "types-setuptools>=80.9.0.20250822",
     "typing-extensions>=4.14.0",
 ]
 
