Refactor video summary API with structured timestamps and async processing
- Change timestamp format from string to structured object with hour/minute/second
- Add async task processing with Celery for video summary generation
- Update API schemas and endpoints to support task-based workflow
- Add comprehensive BDD tests for YouTube video processing
- Include cleanup functionality for test resources
- Add VS Code debug configuration for video summary tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,11 +36,17 @@
             "args": ["features/video_key_insights.feature", "--verbose"],
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
-            "env": {
-                "TEST_USER_NAME": "kduigou",
-                "TEST_USER_PASSWORD": "nivek88*",
-                "TEST_BASE_URL": "http://localhost:8000",
-            }
+            "envFile": "${workspaceFolder}/.env-development"
+        },
+        {
+            "name": "Run Behave Tests - Video Summary YouTube Test",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "behave",
+            "args": ["features/video_summary.feature", "--name", "Create video summary from YouTube URL, wait for completion, verify segments, and delete", "--verbose"],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "envFile": "${workspaceFolder}/.env-development"
         },
        
     ]
