--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "youtube-transcript-api>=0.6.2",
     "trafilatura>=2.0.0",
     "openai>=1.91.0",
+    "anthropic>=0.40.0",
     "httpx>=0.28.1",
     "fastapi>=0.112.0",
     "celery>=5.4.0",
