--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,7 +43,7 @@
             "type": "debugpy",
             "request": "launch",
             "module": "behave",
-            "args": ["features/video_summary.feature", "--name", "Create video summary from YouTube URL with Anthropic, wait for completion, verify segments, and delete", "--verbose"],
+            "args": ["features/video_key_insights.feature", "--name", "Create video key insights from YouTube URL, wait for completion, verify insights, and delete", "--verbose"],
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "envFile": "${workspaceFolder}/.env-development"
