--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "sqlalchemy>=2.0.0",
     "psycopg[binary]>=3.1.0",
     "pyjwt>=2.9.0",
-    "passlib[bcrypt]>=1.7.4",
+    "passlib[bcrypt]>=1.7.4,<2.0.0",
+    "bcrypt>=4.0.0,<5.0.0",
     "python-multipart>=0.0.20",
     "alembic>=1.16.4",
     "python-dotenv>=1.0.0",
