Add subtitle customization options and improve translation quality
- Add subtitle styling parameters (color, style, font size, margins, format)
- Implement two-pass translation with structured outputs and refinement
- Add soft subtitles support and configurable subtitle formats
- Update API schemas and use case to support new customization options
- Add debug configuration for subtitle testing
- Ignore scripts directory in git

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -48,6 +48,16 @@
             "cwd": "${workspaceFolder}",
             "envFile": "${workspaceFolder}/.env-development"
         },
-       
+        {
+            "name": "Run Test Subtitle Direct",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/scripts/test_subtitle_direct.py",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/src"
+            }
+        }
     ]
 }
