Refactor video subtitle system to use ASS file format
- Replace CRUD operations with ASS file retrieval use case
- Add migration for video_subtitles table schema changes
- Update API endpoints to support ASS file downloads
- Add comprehensive BDD tests for subtitle workflow
- Remove unused subtitle management use cases
- Update repository and infrastructure for ASS format

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,11 +39,11 @@
             "envFile": "${workspaceFolder}/.env-development"
         },
         {
-            "name": "Run Behave Tests - Video Summary YouTube Test",
+            "name": "Add French subtitles to test.mkv",
             "type": "debugpy",
             "request": "launch",
             "module": "behave",
-            "args": ["features/video_key_insights.feature", "--name", "Create video key insights from YouTube URL, wait for completion, verify insights, and delete", "--verbose"],
+            "args": ["features/video_subtitles.feature", "--name", "Get ASS file by video ID", "--verbose"],
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "envFile": "${workspaceFolder}/.env-development"
