--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "google-cloud-storage>=2.10.0",
     "websockets>=12.0",
+    "pysubs2>=1.8.0",
 ]
 
 [project.urls]
