Add Magic ASS subtitle transformation feature with video workflow
- Add Magic ASS use case for AI-powered subtitle transformation
- Implement LLM adapter with OpenAI integration for subtitle processing
- Add FastAPI endpoint for subtitle transformation via POST request
- Update BDD tests to cover complete video subtitle workflow
- Add debug configuration and ignore test output files
- Enhance error handling and fallback mechanisms for LLM failures

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -58,6 +58,18 @@
             "env": {
                 "PYTHONPATH": "${workspaceFolder}/src"
             }
+        },
+        {
+            "name": "Run Magic ASS Test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/scripts/test_magic_ass.py",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/src"
+            },
+            "envFile": "${workspaceFolder}/docker/env-vars-dev.yaml"
         }
     ]
 }
